--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-Click==7.0
-configparser==3.5.0
-dlib==19.19.0
-Flask==1.1.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.4.1
-gunicorn==19.10.0
-Jinja2==2.10.3
-numpy==1.14.5
-MarkupSafe==1.0
-requests==2.20.0
-SQLAlchemy==1.3.12
-Werkzeug==0.16.0
+click==8.0.1
+colorama==0.4.4
+Flask==2.0.1
+greenlet==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+SpeechRecognition==3.8.1
+SQLAlchemy==1.4.22
+Werkzeug==2.0.1
