--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-click==8.0.1
-colorama==0.4.4
+Click==8.0.1
+configparser==5.0.2
 Flask==2.0.1
-greenlet==1.1.1
-itsdangerous==2.0.1
-Jinja2==3.0.1
+Flask-SQLAlchemy==2.5.1
+gunicorn==19.10.0
+Jinja2==3.0.0
+numpy==1.21.3
 MarkupSafe==2.0.1
-SQLAlchemy==1.4.22
+SQLAlchemy==1.3.12
 Werkzeug==2.0.1
